[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'aiokeycloak'
description = ''
requires-python = '>= 3.10.0'
version = '0.0.1'
maintainers = [
    { name = 'Ivan Kirpichnikov', email = 'mmssvvvv570@gmail.com' }
]
dependencies = [
    'adaptix>=3.0.0b5, <4.0.0',
    'jwcrypto>=1.5.6, <2.0.0',
]

[project.optional-dependencies]
aiohttp = ['aiohttp>=3.5.0,<4.0.0']
integrations = [
    'aiokeycloak[aiohttp]',
]
linters = [
    'mypy==1.13.0',
    'ruff==0.7.1',
]
dev = [
    'aiokeycloak[linters]',
    'aiokeycloak[integrations]'
]
